<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/screencap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_label_text" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/runtime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/runtime_label_text" />

            <TextView
                android:id="@+id/runtime_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/network_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_label_text" />

            <TextView
                android:id="@+id/network_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/airday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airday_label_text" />

            <TextView
                android:id="@+id/airday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/timezone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timezone_label_text" />

            <TextView
                android:id="@+id/timezone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/genres_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres_label_text" />

            <TextView
                android:id="@+id/genres_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/summary_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_label_text" />

            <TextView
                android:id="@+id/summary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/episodelist_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episodelist_button_text" />
    </LinearLayout>

</ScrollView>